# AVR_DC-Motor-Control

./: .travis.yml  CMakeCache.txt  CMakeLists.txt  MotorControl.sln
CodeDB/MotorControl-Debug-Win32.0001/: DCMotor12VoltsDriver.npa00  DCMotor12VoltsDriver.npa01  DCMotor12VoltsDriver.npd  DCMotor12VoltsDriver.rdb  PID.npa00  PID.npd  PID.rdb  PWMDriver.npa00  PWMDriver.npd  PWMDriver.rdb  QuadratureEncoder.npa00  QuadratureEncoder.npd  QuadratureEncoder.rdb  codedb.lck  main.npa00  main.npd  main.rdb  operators.npa01  operators.npd  operators.rdb  test.npa01  tmp00000001.npa00  tmp00000004.npa00  tmp00000007.npa00  (+15 more)
MotorControl/: CMakeLists.txt  DCMotor12VoltsDriver.cpp  DCMotor12VoltsDriver.h  EncoderInterruptDriver.cpp  EncoderInterruptDriver.h  IDCMotor.h  IGPIODriver.h  LEDBlink.cpp  Makefile  Makefile.old  MotorControl-Debug.vgdbsettings  MotorControl-Release.vgdbsettings  MotorControl.vcxproj  MotorControl.vcxproj.filters  PID.cpp  PWMDriver.cpp  PWMDriver.h  QuadratureEncoder.cpp  QuadratureEncoder.h  avr.mak  debug.mak  gcc_Debug.h  gcc_Release.h  main.cpp  operators.cpp  release.mak
MotorControl/VisualGDBCache/MotorControl-Debug/: MemoryUtilizationReport.xml
UnitTest/: CMakeLists.txt  DCMotor12VoltsDriverTest.cpp  DCMotorMock.h  EncoderMock.h  PIDTest.cpp  PWMDriverMock.h  UnitTest.vcxproj  UnitTest.vcxproj.filters
googletest/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  googletest-download.sln  googletest.vcxproj  googletest.vcxproj.filters
(+67 files in other folders)
